--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -60,6 +60,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
                     <connections>
                         <outlet property="lastVideoThumbnail" destination="9jR-Rp-aU5" id="sjP-3m-xde"/>
                         <outlet property="rightButtonIcon" destination="aez-vp-vzP" id="CLn-lu-vOd"/>
@@ -78,7 +79,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="Ui9-go-TNU">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                                <rect key="frame" x="0.0" y="-20" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
@@ -112,6 +113,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
                     <connections>
                         <outlet property="activityIndicator" destination="GlC-H5-Cku" id="MBJ-LZ-qiD"/>
                         <outlet property="compassImage" destination="8qy-zs-qbn" id="BFy-nf-cRD"/>
@@ -131,7 +133,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" id="gKN-jj-xSX">
-                                <rect key="frame" x="0.0" y="47" width="320" height="413"/>
+                                <rect key="frame" x="0.0" y="50" width="320" height="420"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -150,8 +152,8 @@
                                     <outlet property="delegate" destination="l2J-xt-vz1" id="Vv7-Qd-iL1"/>
                                 </connections>
                             </tableView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="topbar.png" id="UV9-04-dpL">
-                                <rect key="frame" x="0.0" y="-18" width="320" height="70"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="LETHA.png" id="UV9-04-dpL">
+                                <rect key="frame" x="0.0" y="-20" width="320" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="SEu-lH-PMv">
@@ -193,20 +195,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="vhH-E3-BO3" userLabel="subView">
-                                <rect key="frame" x="0.0" y="70" width="320" height="390"/>
+                                <rect key="frame" x="0.0" y="50" width="320" height="410"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="topbar.png" id="S3P-dO-pbA">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="ramble.png" id="hlm-UU-9Xc">
-                                <rect key="frame" x="100" y="14" width="120" height="39"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="LETHA.png" id="S3P-dO-pbA">
+                                <rect key="frame" x="0.0" y="-20" width="320" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Kc0-ii-IvQ">
-                                <rect key="frame" x="228" y="16" width="72" height="37"/>
+                                <rect key="frame" x="228" y="7" width="72" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Done">
@@ -221,7 +219,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="lq9-Nh-dzO" userLabel="Back Button">
-                                <rect key="frame" x="20" y="16" width="72" height="37"/>
+                                <rect key="frame" x="20" y="7" width="72" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="&lt;---">
@@ -236,7 +234,7 @@
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="tKi-oy-D1J" userLabel="Accessory Button">
-                                <rect key="frame" x="20" y="17" width="35" height="35"/>
+                                <rect key="frame" x="20" y="8" width="35" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" backgroundImage="gear.png">
@@ -250,9 +248,14 @@
                                     <action selector="accessoryButtonPressed:" destination="jgy-c8-mbi" eventType="touchUpInside" id="OUx-P5-T1O"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="ramble.png" id="hlm-UU-9Xc">
+                                <rect key="frame" x="100" y="3" width="120" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
                     <connections>
                         <outlet property="accessoryButton" destination="tKi-oy-D1J" id="jXx-Jn-Esu"/>
                         <outlet property="backButton" destination="lq9-Nh-dzO" id="mtL-vi-Q2z"/>
@@ -267,11 +270,11 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aVY-U8-2qF" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="LocalTracks" id="F3s-J2-OIO" customClass="LocalTracksViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vi9-LE-m2p">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="390"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="410"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" id="R2x-bD-Blr">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="390"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="410"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -300,7 +303,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1762" y="-10"/>
+            <point key="canvasLocation" x="1742" y="-30"/>
         </scene>
         <scene sceneID="ztD-IF-EhV">
             <objects>
@@ -439,7 +442,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rZZ-ZQ-fV6" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="TrackDetail" id="zld-xc-Htz" customClass="TrackDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OiA-WL-Vk0">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="390"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="410"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Scrub Bar Here" lineBreakMode="tailTruncation" minimumFontSize="10" id="1Cu-dx-ops">
@@ -506,7 +509,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view hidden="YES" opaque="NO" alpha="0.80000001192092896" contentMode="scaleToFill" id="WUD-gT-gTP">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="390"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="410"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Uploading Video..." lineBreakMode="tailTruncation" minimumFontSize="10" id="cZm-XX-6TM">
@@ -563,10 +566,11 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="2257" y="-10"/>
+            <point key="canvasLocation" x="2258" y="-30"/>
         </scene>
     </scenes>
     <resources>
+        <image name="LETHA.png" width="640" height="132"/>
         <image name="bottomleftdown.png" width="99" height="103"/>
         <image name="bottomleftup.png" width="99" height="103"/>
         <image name="bottomrightdown.png" width="99" height="102"/>
@@ -575,7 +579,6 @@
         <image name="compassface.png" width="671" height="678"/>
         <image name="gear.png" width="52" height="52"/>
         <image name="ramble.png" width="237" height="78"/>
-        <image name="topbar.png" width="640" height="140"/>
     </resources>
     <classes>
         <class className="CaptureViewController" superclassName="UIViewController">
