--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
+        <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
@@ -96,20 +97,24 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Urv-eC-19d">
-                                <rect key="frame" x="124" y="423" width="72" height="37"/>
+                                <rect key="frame" x="127" y="427" width="67" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Rec">
+                                <state key="normal" backgroundImage="recordup.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="highlighted">
+                                <state key="highlighted" backgroundImage="recorddown.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="recordButtonPressed:" destination="Tks-0X-fok" eventType="touchUpInside" id="1Dd-0O-JCi"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="recordOFF.png" id="ftL-Je-xA1">
+                                <rect key="frame" x="150" y="434" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -118,6 +123,7 @@
                         <outlet property="activityIndicator" destination="GlC-H5-Cku" id="MBJ-LZ-qiD"/>
                         <outlet property="compassImage" destination="8qy-zs-qbn" id="BFy-nf-cRD"/>
                         <outlet property="recordButton" destination="Urv-eC-19d" id="8jj-yS-agG"/>
+                        <outlet property="recordLight" destination="ftL-Je-xA1" id="OCR-TD-YP0"/>
                         <outlet property="videoPreviewView" destination="Ui9-go-TNU" id="pdu-zC-Hsd"/>
                     </connections>
                 </viewController>
@@ -591,6 +597,9 @@
         <image name="gear.png" width="52" height="52"/>
         <image name="gearIcon.png" width="66" height="66"/>
         <image name="ramble.png" width="237" height="78"/>
+        <image name="recordOFF.png" width="33" height="33"/>
+        <image name="recorddown.png" width="125" height="53"/>
+        <image name="recordup.png" width="125" height="53"/>
     </resources>
     <classes>
         <class className="CaptureViewController" superclassName="UIViewController">
@@ -600,6 +609,7 @@
                 <relationship kind="outlet" name="activityIndicator" candidateClass="UIActivityIndicatorView"/>
                 <relationship kind="outlet" name="compassImage" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="recordLight" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="videoPreviewView" candidateClass="UIView"/>
             </relationships>
         </class>
@@ -650,7 +660,6 @@
             <relationships>
                 <relationship kind="action" name="recentCaptureViewButtonPressed:"/>
                 <relationship kind="action" name="toggleViewButtonPressed:"/>
-                <relationship kind="outlet" name="lastVideoThumbnail" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="rightButtonIcon" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="subView" candidateClass="UIView"/>
             </relationships>
